<resources>
    <string name="app_name">Todo</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="password_forgot">Forgot password</string>
    <string name="login_button">Login</string>
    <string name="register_textView">No account yet? Create one</string>
    <string name="or">Or</string>
    <string name="enter_fullname">Name</string>
    <string name="emailid">Email ID</string>
    <string name="fullname">Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="save">Save</string>
    <string name="already_acc">Already a account? Login</string>
    <string name="register_Name">Name</string>
    <string name="enter_Email">Email</string>
    <string name="pushpin">pushpin</string>
    <string name="edit">edit</string>
    <string name="notes">Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="logic">Logic not implimented yet</string>
    <string name="login_success">Login Successful</string>
    <string name="enter_correct_details">Enter Correct Details Or Register</string>
    <string name="invalid_password">invalid Password</string>
    <string name="password_field_condition">Password should not empty</string>
    <string name="invalid_mail">invalid Mail</string>
    <string name="email_field_condition">Email should not empty</string>
    <string name="first_name">First name not entered</string>
    <string name="format_invalid">invalid format</string>
    <string name="enter_mobile">Enter your mobile number</string>
    <string name="registration_success">Registration Successful</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reminder">Reminder</string>
    <string name="logout">You have successfully logged out</string>
    <string name="logout_success">Logout successful..</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="notesadd_title_hint">Title</string>
    <string name="notesadd_content_hint">Add contents</string>
</resources>
